[gd_scene load_steps=18 format=2]

[ext_resource path="res://assets/Sprite Sheets/enemies2-sheet-alpha.png" type="Texture" id=1]
[ext_resource path="res://Enemies/Flamethrower.gd" type="Script" id=2]

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 54, 58 )

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 1 )
region = Rect2( 0, 58, 54, 58 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 54, 0, 54, 58 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 108, 0, 54, 58 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 162, 0, 54, 58 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 1 )
region = Rect2( 216, 0, 54, 58 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 1 )
region = Rect2( 270, 0, 54, 58 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 1 )
region = Rect2( 54, 58, 54, 58 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 108, 58, 54, 58 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 162, 58, 54, 58 )

[sub_resource type="AtlasTexture" id=10]
atlas = ExtResource( 1 )
region = Rect2( 216, 58, 54, 58 )

[sub_resource type="AtlasTexture" id=11]
atlas = ExtResource( 1 )
region = Rect2( 270, 58, 54, 58 )

[sub_resource type="SpriteFrames" id=12]
animations = [ {
"frames": [ SubResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle_attacking",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
}, {
"frames": [ SubResource( 7 ), SubResource( 8 ), SubResource( 9 ), SubResource( 10 ), SubResource( 11 ) ],
"loop": true,
"name": "walk_attacking",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=13]
extents = Vector2( 9, 22 )

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 360, 5 )

[node name="Flamethrower" type="KinematicBody2D"]
position = Vector2( 0, -29 )
z_index = -1
collision_mask = 21
script = ExtResource( 2 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 12 )
animation = "idle"
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1, 8 )
shape = SubResource( 13 )

[node name="VisionArea" type="Area2D" parent="."]
visible = false
position = Vector2( -1, 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="VisionArea"]
position = Vector2( 2, -11 )
shape = SubResource( 14 )

[node name="RayCast2DLeftFloor" type="RayCast2D" parent="."]
visible = false
position = Vector2( -11, 7 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 9

[node name="RayCast2DRightFloor" type="RayCast2D" parent="."]
visible = false
position = Vector2( 8, 6 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 9

[node name="RayCast2DLeftWalls" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( -232, 0 )
collision_mask = 513

[node name="RayCast2DRightWalls" type="RayCast2D" parent="."]
visible = false
enabled = true
cast_to = Vector2( 230, 0 )

[node name="LeftMuzzle" type="Position2D" parent="."]
visible = false
position = Vector2( -22, 2 )

[node name="RightMuzzle" type="Position2D" parent="."]
visible = false
position = Vector2( 22, 2 )
